Updated datastruct work